feat: Replace Gemini Realtime with HeyGen TTS for AI interviews
Major changes:
- Add AgentManager for multi-agent support and proper lifecycle management
- Integrate HeyGen avatar for AI interviewer video
- Add transcript collection and include in completion webhook
- Improve interview completion detection and timing
- Clean up interview UI (controls at bottom, PIP without overlays)
- Add configurable Gemini mode (realtime vs text-based)
- Update webhook handler with proper payload structure

Agent improvements:
- Support multiple concurrent interviews tracked by call_id
- Proper cleanup on interview completion (5s wait for final audio)
- HeyGen session management and error handling
- Add /agents/status and /agents/{call_id}/shutdown endpoints

--- a/apps/agent/.env.example
+++ b/apps/agent/.env.example
@@ -12,6 +12,14 @@ OPENAI_MODEL=gpt-4o-realtime-preview
 
 # Alternative: Gemini Configuration (comment out OpenAI if using this)
 # GEMINI_API_KEY=your_gemini_api_key_here
+# GEMINI_MODEL=gemini-2.5-flash
+# GEMINI_USE_REALTIME=false  # Set to 'true' to use Gemini Live realtime API
+
+# Deepgram STT Configuration (only needed when NOT using Realtime LLMs)
+# When using Gemini Realtime or OpenAI Realtime, built-in STT is used instead
+# DEEPGRAM_API_KEY=your_deepgram_api_key_here
+# DEEPGRAM_SAMPLE_RATE=48000
+# DEEPGRAM_LANGUAGE=en-US
 
 # HeyGen Avatar Configuration
 HEYGEN_API_KEY=your_heygen_api_key_here
@@ -28,3 +36,6 @@ NEXTJS_WEBHOOK_URL=http://localhost:3000
 # Agent Settings
 AGENT_FPS=10
 AGENT_TIMEOUT=3600
+
+# Logging (optional)
+# LOG_LEVEL_WEBRTC=WARNING  # Set to DEBUG to diagnose ICE/STUN connection issues
