fix: use CPU-only PyTorch for Cloud Run deployment
- Add PyTorch CPU index to pyproject.toml
- Add .dockerignore to exclude .venv and .python-version
- Update Dockerfile for cleaner multi-stage build
- Track uv.lock for reproducible builds

--- a/apps/agent/.gitignore
+++ b/apps/agent/.gitignore
@@ -7,8 +7,8 @@ __pycache__/
 *$py.class
 *.so
 
-# UV lock file (managed by uv)
-uv.lock
+# UV lock file - tracked for reproducible builds
+# uv.lock
 
 # Environment variables
 .env
