--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -91,7 +91,8 @@
     "tailwind-merge": "^3.4.0",
     "tw-animate-css": "^1.4.0",
     "vaul": "^1.1.2",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "@sync-hire/shared": "workspace:*"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
