--- a/apps/web/firebase.json
+++ b/apps/web/firebase.json
@@ -1,51 +1,3 @@
 {
-  "hosting": {
-    "source": ".",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "frameworksBackend": {
-      "region": "asia-southeast1"
-    },
-    "rewrites": [
-      {
-        "source": "/python-api/**",
-        "run": {
-          "serviceId": "sync-hire-agent",
-          "region": "asia-southeast1"
-        }
-      }
-    ],
-    "headers": [
-      {
-        "source": "**/*.@(jpg|jpeg|gif|png|svg|webp|ico)",
-        "headers": [
-          {
-            "key": "Cache-Control",
-            "value": "public, max-age=31536000, immutable"
-          }
-        ]
-      },
-      {
-        "source": "**/*.@(js|css)",
-        "headers": [
-          {
-            "key": "Cache-Control",
-            "value": "public, max-age=31536000, immutable"
-          }
-        ]
-      },
-      {
-        "source": "**/*.@(woff|woff2|ttf|eot)",
-        "headers": [
-          {
-            "key": "Cache-Control",
-            "value": "public, max-age=31536000, immutable"
-          }
-        ]
-      }
-    ]
-  }
+  "$comment": "Firebase App Hosting uses apphosting.yaml for configuration. This file is kept minimal for any future Firebase services."
 }
