feat: add Help → About dialog with build version
- Inject commit SHA and build time via next.config.ts
- Add AboutDialog component with version info
- Add Help icon (?) to header that opens dialog
- Update apphosting.yaml with explicit availability
- Update setup script to grant backend access to secrets

--- a/apps/web/apphosting.yaml
+++ b/apps/web/apphosting.yaml
@@ -9,24 +9,44 @@ runConfig:
   concurrency: 80
 
 env:
-  # Public environment variables (safe to commit)
+  # Public environment variables (needed at build time for Next.js)
   - variable: NEXT_PUBLIC_STREAM_API_KEY
     value: 98ftk7pxystq
+    availability:
+      - BUILD
+      - RUNTIME
   - variable: NEXT_PUBLIC_DEMO_USER_NAME
     value: Demo Candidate
+    availability:
+      - BUILD
+      - RUNTIME
   - variable: NEXT_PUBLIC_DEMO_USER_EMAIL
     value: demo@synchire.com
+    availability:
+      - BUILD
+      - RUNTIME
   - variable: NEXT_PUBLIC_LOGO_DEV_KEY
     value: pk_FgUgq-__SdOal0JNAYVqJQ
+    availability:
+      - BUILD
+      - RUNTIME
 
-  # Python Agent Cloud Run URL
+  # Python Agent Cloud Run URL (runtime only)
   - variable: PYTHON_AGENT_URL
     value: https://sync-hire-agent-297349712190.asia-southeast1.run.app
+    availability:
+      - RUNTIME
 
-  # Secrets (stored in Secret Manager)
+  # Secrets (runtime only - don't expose at build time)
   - variable: API_SECRET_KEY
     secret: API_SECRET_KEY
+    availability:
+      - RUNTIME
   - variable: STREAM_API_SECRET
     secret: STREAM_API_SECRET
+    availability:
+      - RUNTIME
   - variable: GEMINI_API_KEY
     secret: GEMINI_API_KEY
+    availability:
+      - RUNTIME
