fix: separate CPU-only PyTorch for Cloud Run from local dev
Move extra-index-url from pyproject.toml to Dockerfile so local
macOS development uses standard PyTorch while Cloud Run gets
CPU-only version.

--- a/apps/agent/pyproject.toml
+++ b/apps/agent/pyproject.toml
@@ -28,5 +28,5 @@ dev = [
 ]
 
 [tool.uv]
-# Use CPU-only PyTorch for Cloud Run (no GPU support)
-extra-index-url = ["https://download.pytorch.org/whl/cpu"]
+# Note: CPU-only PyTorch is configured in Dockerfile for Cloud Run
+# Local development uses standard PyTorch
