--- a/apps/processor/package.json
+++ b/apps/processor/package.json
@@ -10,6 +10,9 @@
     "lint": "tsc --noEmit"
   },
   "dependencies": {
+    "@langchain/core": "^1.1.5",
+    "@langchain/google-genai": "^2.1.0",
+    "@langchain/langgraph": "^1.0.4",
     "@sync-hire/shared": "workspace:*",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
