--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "build": "turbo build",
     "test": "turbo test",
     "lint": "turbo lint",
+    "format": "biome format --write",
     "clean": "turbo clean && rm -rf node_modules",
     "sync": "turbo sync"
   },
   "devDependencies": {
-    "turbo": "^2.3.0"
+    "@biomejs/biome": "catalog:",
+    "turbo": "catalog:"
   },
   "packageManager": "pnpm@9.15.0",
   "engines": {
