feat: add Prisma 7 database package with full MVP integration
- Add packages/database with Prisma 7 and PostgreSQL adapter
- Implement DatabaseStorage class for job, CV, and application persistence
- Add type-safe JSON fields for flexible data storage
- Integrate database with web app using storage factory pattern
- Add database connection validation on startup
- Fix TypeScript type safety issues (remove 'as any' assertions)
- Configure Turbopack compatibility for Next.js

--- a/package.json
+++ b/package.json
@@ -13,7 +13,15 @@
     "lint": "turbo lint",
     "format": "biome format --write",
     "clean": "turbo clean && rm -rf node_modules",
-    "sync": "turbo sync"
+    "sync": "turbo sync",
+    "db:generate": "turbo run db:generate",
+    "db:push": "turbo run db:push",
+    "db:migrate": "turbo run db:migrate",
+    "db:migrate:deploy": "turbo run db:migrate:deploy",
+    "db:studio": "turbo run db:studio",
+    "db:seed": "turbo run db:seed",
+    "db:reset": "turbo run db:reset",
+    "db:test": "turbo run db:test"
   },
   "devDependencies": {
     "@biomejs/biome": "catalog:",
