--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,8 @@
     "@google-cloud/secret-manager": "^6.0.0",
     "@google/genai": "^1.30.0",
     "@hookform/resolvers": "^5.2.2",
+    "@prisma/adapter-pg": "7.1.0",
+    "@prisma/client": "7.1.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
@@ -50,7 +52,9 @@
     "@sentry/nextjs": "^10",
     "@stream-io/node-sdk": "^0.7.17",
     "@stream-io/video-react-sdk": "^1.25.1",
+    "@sync-hire/database": "workspace:*",
     "@tanstack/react-query": "^5.90.7",
+    "@types/pg": "8.16.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -61,6 +65,7 @@
     "lucide-react": "^0.554.0",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
+    "pg": "8.16.3",
     "react": "19.2.1",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.2.1",
