feat(database): add production deployment setup
- Add missing indexes to Account and Session models
- Add createdAt/updatedAt audit fields to Account model
- Fix InterviewCall → Interview relation with proper cascade
- Add onDelete: Cascade to Interview → Job relation
- Configure connection pool (max/min/timeouts) in client.ts
- Add SSL enforcement for production environments
- Add hard startup failure on DB error in production
- Add production guard to seed.ts to prevent accidental seeding
- Create initial database migration
- Add DATABASE_URL secret to apphosting.yaml for Firebase App Hosting
- Update documentation with production setup instructions

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,9 +1,13 @@
 # Database (PostgreSQL)
 # Development: Local PostgreSQL
 DATABASE_URL="postgresql://postgres:synchire@localhost:5432/synchire"
-# Production: GCP Cloud SQL
+# Production: GCP Cloud SQL (SSL enforced automatically in production)
 # DATABASE_URL="postgresql://user:password@/dbname?host=/cloudsql/project:region:instance"
 USE_DATABASE=true
+
+# Connection Pool Configuration (optional, defaults shown)
+# DB_POOL_MAX=20
+# DB_POOL_MIN=2
 
 # Stream Video Configuration
 NEXT_PUBLIC_STREAM_API_KEY=your_stream_api_key_here
