--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,9 +6,9 @@
     "node": ">=22"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p ${WEB_PORT:-3000}",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p ${WEB_PORT:-3000}",
     "lint": "biome check",
     "format": "biome format --write",
     "data:clean": "rm -rf data/ && mkdir -p data/",
