--- a/turbo.json
+++ b/turbo.json
@@ -4,7 +4,7 @@
   "globalEnv": ["DATABASE_URL", "WEB_PORT"],
   "tasks": {
     "build": {
-      "dependsOn": ["^build", "^db:generate"],
+      "dependsOn": ["^build", "^db:generate", "db:generate"],
       "outputs": [".next/**", "!.next/cache/**", "dist/**", "build/**"]
     },
     "dev": {
