feat: add InterviewStatus enums, typecheck command, and fix cvUploadId reference

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
     "dev": "next dev -p ${WEB_PORT:-3000}",
     "build": "next build",
     "start": "next start -p ${WEB_PORT:-3000}",
+    "typecheck": "tsc --noEmit",
     "lint": "biome check",
     "format": "biome format --write",
     "data:clean": "rm -rf data/ && mkdir -p data/",
