feat: add GCP Cloud Storage support and fix type errors
- Add GCP Cloud Storage provider for CV and JD file uploads
- Create storage provider abstraction (local/GCS)
- Update storage interface to use Prisma/database types
- Fix type errors in API routes for proper database type alignment
- Update MVP implementation plan with progress tracking
- Add barrel files anti-pattern to CLAUDE.md guidelines

Cloud Storage:
- Add gcs-client.ts singleton for Cloud Storage client
- Add CloudStorageProvider interface with GCS and local implementations
- Add storage-provider-factory for environment-based provider selection
- Update database-storage.ts to use cloud storage for file uploads

Type System Updates:
- Storage interface now uses JobWithQuestions from database
- API routes updated to use ApplicationStatus/MatchingStatus enums
- CandidateApplication uses cvUploadId instead of cvId
- getAllCVExtractions now returns userId for AI matching

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -9,6 +9,17 @@ USE_DATABASE=true
 # DB_POOL_MAX=20
 # DB_POOL_MIN=2
 
+# Cloud Storage (GCP)
+# Set to "true" to use GCP Cloud Storage, "false" for local file storage
+USE_CLOUD_STORAGE=false
+# GCP Project ID (required when USE_CLOUD_STORAGE=true)
+GCP_PROJECT_ID=your-project-id
+# GCS Bucket Names (customize per environment)
+GCS_BUCKET_CV=synchire-cvs
+GCS_BUCKET_JD=synchire-job-descriptions
+# Service account credentials (in production, use Application Default Credentials)
+# GOOGLE_APPLICATION_CREDENTIALS=/path/to/service-account.json
+
 # Stream Video Configuration
 NEXT_PUBLIC_STREAM_API_KEY=your_stream_api_key_here
 STREAM_API_SECRET=your_stream_api_secret_here
