--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@google-cloud/secret-manager": "^6.0.0",
+    "@google-cloud/storage": "^7.18.0",
     "@google/genai": "^1.30.0",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/adapter-pg": "7.1.0",
