refactor: simplify storage by using CloudStorageProvider directly in processors
- Remove upload methods from StorageInterface (uploadCV, uploadJobDescription, getCVPath, getJobDescriptionPath)
- Remove upload methods from DatabaseStorage and FileStorage
- Update CVProcessor and JobDescriptionProcessor to accept CloudStorageProvider via constructor
- Update API routes to inject CloudStorageProvider to processors
- Update storage-factory to not inject cloudStorage into DatabaseStorage
- Update turbo.json typecheck to depend on ^typecheck
- Add --no-hints to prisma generate command

--- a/turbo.json
+++ b/turbo.json
@@ -13,8 +13,7 @@
       "persistent": true
     },
     "typecheck": {
-      "dependsOn": ["^db:generate", "db:generate"],
-      "cache": false
+      "dependsOn": ["^typecheck"]
     },
     "lint": {
       "dependsOn": ["^lint"]
