feat: private cloud storage with signed URLs and single bucket
- Add getSignedUrl() to CloudStorageProvider interface for time-limited access
- Use single GCS bucket (synchire-uploads) with path prefixes (cv/, jd/)
- Return relative paths from upload methods for bucket migration flexibility
- Update setup-apphosting.sh with bucket creation and IAM permission checks
- Add USE_CLOUD_STORAGE and GCS_BUCKET env vars to apphosting.yaml

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -14,9 +14,8 @@ USE_DATABASE=true
 USE_CLOUD_STORAGE=false
 # GCP Project ID (required when USE_CLOUD_STORAGE=true)
 GCP_PROJECT_ID=your-project-id
-# GCS Bucket Names (customize per environment)
-GCS_BUCKET_CV=synchire-cvs
-GCS_BUCKET_JD=synchire-job-descriptions
+# GCS Bucket Name (single bucket with cv/ and jd/ prefixes)
+GCS_BUCKET=synchire-uploads
 # Service account credentials (in production, use Application Default Credentials)
 # GOOGLE_APPLICATION_CREDENTIALS=/path/to/service-account.json
 
