feat: configure VPC access for Cloud SQL private IP
- Add VPC network and subnet setup to setup-database.sh
- Add private service connection configuration
- Enable private IP on Cloud SQL instance
- Update DATABASE_URL to use TCP format with private IP
- Add vpcAccess configuration to apphosting.yaml
- Update database client to skip SSL for VPC connections
- Add dry-run mode with timeouts to setup scripts
- Add VPC configuration check to setup-apphosting.sh

--- a/apps/web/apphosting.yaml
+++ b/apps/web/apphosting.yaml
@@ -7,6 +7,11 @@ runConfig:
   minInstances: 0
   maxInstances: 10
   concurrency: 80
+  vpcAccess:
+    egress: PRIVATE_RANGES_ONLY
+    networkInterfaces:
+      - network: synchire-network
+        subnetwork: synchire-subnet
 
 env:
   # Public environment variables (needed at build time for Next.js)
