--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -29,9 +29,20 @@ AGENT_API_URL=http://localhost:8080
 # AI Services
 GEMINI_API_KEY=your_gemini_api_key_here
 
-# Demo User Configuration
+# Demo User Configuration (deprecated - use Better Auth)
 NEXT_PUBLIC_DEMO_USER_NAME=Demo Candidate
 NEXT_PUBLIC_DEMO_USER_EMAIL=demo@synchire.com
+
+# Better Auth Configuration
+# Generate secret: openssl rand -base64 32
+BETTER_AUTH_SECRET=your-secret-key-min-32-chars
+BETTER_AUTH_URL=http://localhost:3000
+NEXT_PUBLIC_BETTER_AUTH_URL=http://localhost:3000
+
+# Google OAuth (optional)
+# Create credentials at https://console.cloud.google.com/apis/credentials
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 
 # Logo.dev API (for company logos)
 # Get your API key at https://www.logo.dev/
