--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -57,6 +57,7 @@
     "@sync-hire/database": "workspace:*",
     "@tanstack/react-query": "^5.90.7",
     "@types/pg": "8.16.0",
+    "better-auth": "^1.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
