--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@prisma/adapter-pg": "7.1.0",
     "@prisma/client": "7.1.0",
+    "better-auth": "^1.4.7",
     "pg": "8.16.3"
   },
   "devDependencies": {
