--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -64,6 +64,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.24",
+    "import-in-the-middle": "^2.0.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.554.0",
     "next": "16.0.10",
