chore: add Better Auth secrets to deployment config
- Add BETTER_AUTH_SECRET, GOOGLE_CLIENT_ID, GOOGLE_CLIENT_SECRET to apphosting.yaml
- Add BETTER_AUTH_URL pointing to https://sync-hire.com
- Update setup-apphosting.sh to configure auth secrets
- Fix stdin conflict by using temp file for secret values
- Remove unused hasScanning variable from HR jobs page

--- a/apps/web/apphosting.yaml
+++ b/apps/web/apphosting.yaml
@@ -58,21 +58,47 @@ env:
     availability:
       - RUNTIME
 
+  # Better Auth URL (public)
+  - variable: BETTER_AUTH_URL
+    value: https://sync-hire.com
+    availability:
+      - BUILD
+      - RUNTIME
+  - variable: NEXT_PUBLIC_BETTER_AUTH_URL
+    value: https://sync-hire.com
+    availability:
+      - BUILD
+      - RUNTIME
+
   # Database connection (needed at build time for Prisma generate)
   - variable: DATABASE_URL
     secret: DATABASE_URL
     availability:
       - BUILD
       - RUNTIME
-  - variable: API_SECRET_KEY
-    secret: API_SECRET_KEY
+
+  # AI & Video secrets
+  - variable: GEMINI_API_KEY
+    secret: GEMINI_API_KEY
     availability:
       - RUNTIME
   - variable: STREAM_API_SECRET
     secret: STREAM_API_SECRET
     availability:
       - RUNTIME
-  - variable: GEMINI_API_KEY
-    secret: GEMINI_API_KEY
+
+  # Better Auth secret
+  - variable: BETTER_AUTH_SECRET
+    secret: BETTER_AUTH_SECRET
+    availability:
+      - RUNTIME
+
+  # Google OAuth credentials
+  - variable: GOOGLE_CLIENT_ID
+    secret: GOOGLE_CLIENT_ID
+    availability:
+      - RUNTIME
+  - variable: GOOGLE_CLIENT_SECRET
+    secret: GOOGLE_CLIENT_SECRET
     availability:
       - RUNTIME
