Add missing API_SECRET_KEY runtime access

--- a/apps/web/apphosting.yaml
+++ b/apps/web/apphosting.yaml
@@ -102,3 +102,9 @@ env:
     secret: GOOGLE_CLIENT_SECRET
     availability:
       - RUNTIME
+
+  # Python Agent API Key
+  - variable: API_SECRET_KEY
+    secret: API_SECRET_KEY
+    availability:
+      - RUNTIME
