Add Resend email integration for auth flows
Implement transactional email sending with Resend and React Email:
- Email verification on signup
- Password reset requests
- Organization invitation emails

Files:
- Create email service module with Sentry logging
- Create React Email templates for all 3 email types
- Update Better Auth to use email service
- Update MVP progress tracking (75% → 78%)

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -44,6 +44,12 @@ NEXT_PUBLIC_BETTER_AUTH_URL=http://localhost:3000
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
+# Email Service (Resend)
+# Get your API key at https://resend.com/api-keys
+RESEND_API_KEY=re_your_api_key_here
+# Sender email (must be verified in Resend)
+EMAIL_FROM="SyncHire <noreply@yourdomain.com>"
+
 # Logo.dev API (for company logos)
 # Get your API key at https://www.logo.dev/
 NEXT_PUBLIC_LOGO_DEV_KEY=
