--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -51,6 +51,7 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-email/components": "^1.0.1",
     "@sentry/nextjs": "^10",
     "@stream-io/node-sdk": "^0.7.17",
     "@stream-io/video-react-sdk": "^1.25.1",
@@ -77,6 +78,7 @@
     "react-resizable-panels": "^3.0.6",
     "recharts": "^3.4.1",
     "require-in-the-middle": "^8.0.1",
+    "resend": "^6.6.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tw-animate-css": "^1.4.0",
