Add Resend email service to App Hosting config
- Add RESEND_API_KEY secret and EMAIL_FROM env var to apphosting.yaml
- Update setup-apphosting.sh to create and grant access to RESEND_API_KEY

--- a/apps/web/apphosting.yaml
+++ b/apps/web/apphosting.yaml
@@ -120,3 +120,13 @@ env:
     availability:
       - BUILD
       - RUNTIME
+
+  # Email service (Resend)
+  - variable: RESEND_API_KEY
+    secret: RESEND_API_KEY
+    availability:
+      - RUNTIME
+  - variable: EMAIL_FROM
+    value: "SyncHire <noreply@sync-hire.com>"
+    availability:
+      - RUNTIME
