Add optional rate limiting for AI endpoints using @upstash/ratelimit
Protects expensive AI operations from abuse with tiered rate limits:
- expensive (10/min): CV extraction, JD extraction, candidate matching
- moderate (20/min): question generation, interview analysis
- light (50/min): reserved for future use

Uses sliding window algorithm with graceful degradation when Redis
is unavailable. Enabled automatically in production when Upstash
credentials are configured.

Also replaces console.log/error with structured logger calls for
better observability in Sentry.

--- a/apps/web/apphosting.yaml
+++ b/apps/web/apphosting.yaml
@@ -130,3 +130,13 @@ env:
     value: "SyncHire <noreply@sync-hire.com>"
     availability:
       - RUNTIME
+
+  # Rate limiting (Upstash Redis) - optional, enabled in production
+  - variable: UPSTASH_REDIS_REST_URL
+    secret: UPSTASH_REDIS_REST_URL
+    availability:
+      - RUNTIME
+  - variable: UPSTASH_REDIS_REST_TOKEN
+    secret: UPSTASH_REDIS_REST_TOKEN
+    availability:
+      - RUNTIME
