Switch rate limiting from REST to TCP (ioredis)
- Replace @upstash/ratelimit + @upstash/redis with ioredis + rate-limiter-flexible
- Use persistent TCP connection for ~10x faster latency (6ms vs 250ms)
- Add configurable REDIS_PREFIX for sharing Redis across apps
- Update env variable from UPSTASH_REDIS_REST_URL/TOKEN to REDIS_URL
- Log host, port, and prefix on startup for visibility

--- a/apps/web/apphosting.yaml
+++ b/apps/web/apphosting.yaml
@@ -131,12 +131,8 @@ env:
     availability:
       - RUNTIME
 
-  # Rate limiting (Upstash Redis) - optional, enabled in production
-  - variable: UPSTASH_REDIS_REST_URL
-    secret: UPSTASH_REDIS_REST_URL
-    availability:
-      - RUNTIME
-  - variable: UPSTASH_REDIS_REST_TOKEN
-    secret: UPSTASH_REDIS_REST_TOKEN
+  # Rate limiting (Redis TCP) - optional, enabled in production
+  - variable: REDIS_URL
+    secret: REDIS_URL
     availability:
       - RUNTIME
