--- a/apps/processor/package.json
+++ b/apps/processor/package.json
@@ -13,12 +13,15 @@
     "@langchain/core": "^1.1.5",
     "@langchain/google-genai": "^2.1.0",
     "@langchain/langgraph": "^1.0.4",
+    "@sync-hire/database": "workspace:*",
     "@sync-hire/shared": "workspace:*",
+    "@types/multer": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^5.2.1",
     "helmet": "^8.1.0",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "winston": "^3.19.0",
     "zod": "^3.24.1"
   },
