Enable Tailwind CSS directives in Biome config
- Add css.parser.tailwindDirectives option for proper Tailwind parsing
- Enable cssModules for CSS module support
- Remove noUnknownAtRules override (no longer needed)

--- a/biome.json
+++ b/biome.json
@@ -9,6 +9,12 @@
     "ignoreUnknown": true,
     "includes": ["**", "!node_modules", "!.next", "!dist", "!build"]
   },
+  "css": {
+    "parser": {
+      "cssModules": true,
+      "tailwindDirectives": true
+    }
+  },
   "formatter": {
     "enabled": true,
     "indentStyle": "space",
@@ -19,7 +25,6 @@
     "rules": {
       "recommended": true,
       "suspicious": {
-        "noUnknownAtRules": "off",
         "noConsole": "error"
       }
     },
