Fix remaining lint errors: a11y, style, and security
- Add type="button" to all interactive buttons (9 fixes)
- Add htmlFor/id associations to form labels (13 fixes)
- Add biome-ignore for semantic element warnings in UI components
- Fix CSS specificity by reordering rules (generic before specific)
- Add lang="en" to global-error.tsx html element
- Convert question card from div to button for proper accessibility
- Add keyboard handler and proper ARIA to interactive elements
- Disable noDangerouslySetInnerHtml for chart.tsx in biome.json
  (trusted CSS injection from THEMES constant)

--- a/biome.json
+++ b/biome.json
@@ -33,6 +33,18 @@
       "react": "recommended"
     }
   },
+  "overrides": [
+    {
+      "includes": ["**/ui/chart.tsx"],
+      "linter": {
+        "rules": {
+          "security": {
+            "noDangerouslySetInnerHtml": "off"
+          }
+        }
+      }
+    }
+  ],
   "assist": {
     "actions": {
       "source": {
