Integrate Novu for in-app and email notifications
Replace custom notification system with Novu platform:
- Add @novu/nextjs and @novu/api packages
- Create NovuNotificationService with dependency injection
- Add NotificationInbox component with theme support
- Trigger notifications for interview lifecycle events
- Update apphosting.yaml with Novu secrets
- Remove old notification API, hooks, and storage methods

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -50,6 +50,14 @@ RESEND_API_KEY=re_your_api_key_here
 # Sender email (must be verified in Resend)
 EMAIL_FROM="SyncHire <noreply@yourdomain.com>"
 
+# Novu Notifications
+# Get your credentials at https://dashboard.novu.co
+NOVU_API_KEY=your_novu_api_key_here
+NEXT_PUBLIC_NOVU_APPLICATION_IDENTIFIER=your_novu_app_id_here
+# Optional: For EU region, uncomment these:
+# NEXT_PUBLIC_NOVU_BACKEND_URL=https://eu.api.novu.co
+# NEXT_PUBLIC_NOVU_SOCKET_URL=wss://eu.ws.novu.co
+
 # Logo.dev API (for company logos)
 # Get your API key at https://www.logo.dev/
 NEXT_PUBLIC_LOGO_DEV_KEY=
