--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,6 +28,8 @@
     "@google-cloud/storage": "^7.18.0",
     "@google/genai": "^1.30.0",
     "@hookform/resolvers": "^5.2.2",
+    "@novu/api": "3.12.0-rc.0",
+    "@novu/nextjs": "^3.11.0",
     "@prisma/adapter-pg": "7.1.0",
     "@prisma/client": "7.1.0",
     "@radix-ui/react-accordion": "^1.2.12",
